<resources>
    <string name="app_name">FoodShoppingAppAdmin</string>
    <string name="title_dishes">Dishes</string>
    <string name="title_order">Orders</string>
    <string name="title_report">Report</string>
    <string name="edit_dish">Edit dish</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--login-->
    <string name="login_with_facebook">COUNTINUE WITH FACEBOOK</string>
    <string name="login_with_google">COUNTINUE WITH GOOGLE</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_now">Sign up now!</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="welcome_splash_screen">Welcome to admin app</string>
    <string name="delete_product">Delete Product</string>
    <string name="delete_product_alert">Are you sure to delete this product?</string>
    <string name="cancel">Cancel</string>
    <string name="save_product">Save Product</string>
    <string name="save_eatery">Save Eatery</string>
    <string name="save_order">Save Order</string>
    <string name="save_confirm">Do you want to save these changes?</string>
    <string name="save_confirm_alert">Are you sure to save these changes?\nWith "Cancelled" or "Completed" status, you can not change it anymore</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="username">Username</string>
    <string name="add_product">Add product</string>
    <string name="new_product">New Product</string>
    <string name="product_name">Product\'s Name</string>
    <string name="price">Price</string>
    <string name="add">add</string>
    <string name="description">Description</string>
    <string name="orders">Orders</string>
    <string name="status">Status</string>
    <string name="save">Save</string>
    <string name="products">Products</string>
    <string name="title_profile">Profile</string>
    <string name="user_profile_avatar">User profile avatar</string>
    <string name="profile">Profile &amp; Address</string>
    <string name="reviews">Reviews</string>
    <string name="eatery_information">Eatery Information</string>
    <string name="eatery_name">Eatery name</string>
    <string name="eatery_description">Eatery description</string>
    <string name="eatery_address">Eatery address</string>
    <string name="worktime">Worktime</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="total_orders">Total orders:</string>
    <string-array name="status_list">
        <item>Pending</item>
        <item>Preparing</item>
        <item>Shipping</item>
        <item>Completed</item>
        <item>Cancelled</item>
    </string-array>
    <string name="total_revenue">Total revenue:</string>
    <string name="select">select</string>
    <string name="your_eatery_is_here">Your eatery is here</string>
    <string name="please_select_location">Please select location</string>
    <string name="report">Report</string>
    <string name="order_detail">Order detail</string>
    <string name="change">Change</string>
    <string name="events">Events</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="ingredient">Ingredient</string>
    <string name="edit_product">Edit Product</string>
    <string name="delete">Delete</string>
    <string name="select_image">Select Image</string>
    <string name="total">%1$s VNĐ</string>
    <string name="product_price">%1$s VNĐ</string>
    <string name="total_price">Total: %1$s VNĐ</string>
    <string name="rating">%1$s/5.0</string>
</resources>