<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="xyz.daijoubuteam.foodshoppingappadmin.authentication.login.LoginViewModel" />
    </data>
    <LinearLayout
        android:id="@+id/linearSignin"
        android:gravity="start"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/white_A700"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="30dp"
            android:singleLine="true"
            android:text="@string/sign_in"
            android:textSize="40sp"
            android:textColor="@color/bluegray_700"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:hintTextColor="@color/lightOrange"
            app:boxStrokeColor="@color/lightOrange"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="16dp"
                android:singleLine="true"
                android:textColorHint="@color/gray_500"
                android:textSize="16sp"
                android:textColor="@color/gray_800"
                android:fontFamily="@font/avenir_next_lt_pro"
                android:textFontWeight="400"
                tools:ignore="RtlSymmetry"
                tools:targetApi="p"
                android:text="@={viewmodel.username}" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:hintTextColor="@color/lightOrange"
            app:boxStrokeColor="@color/lightOrange"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:ellipsize="end"
                android:id="@+id/etPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="16dp"
                android:singleLine="true"
                android:textColorHint="@color/gray_500"
                android:textSize="16sp"
                android:textColor="@color/gray_800"
                android:fontFamily="@font/avenir_next_lt_pro"
                android:textFontWeight="400"
                android:password="true"
                tools:ignore="Deprecated,RtlSymmetry"
                tools:targetApi="p"
                android:imeOptions="actionDone"
                android:text="@={viewmodel.password}"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/tvForgotPassword"
            android:ellipsize="end"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:singleLine="true"
            android:text="@string/forgot_password"
            android:textFontWeight="500"
            android:textSize="15sp"
            android:textColor="@color/bluegray_700"
            android:fontFamily="@font/avenir_next_lt_pro"
            tools:targetApi="p"
            android:onClick="@{() -> viewmodel.onNavigateToForgetPassword()}"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:ellipsize="end"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:singleLine="true"
            android:text="@string/btn_sign_in"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textFontWeight="400"
            android:fontFamily="@font/avenir_next_lt_pro"
            android:textColor="@color/white_A700"
            android:backgroundTint="@color/deep_orange_A200"
            tools:ignore="UnusedAttribute"
            android:onClick="@{() -> viewmodel.onLoginWithUsernameAndPassword()}"/>
    </LinearLayout>
</layout>