<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_products">

    <fragment
        android:id="@+id/navigation_products"
        android:name="xyz.daijoubuteam.foodshoppingappadmin.ui.products.ProductsFragment"
        android:label="Products"
        tools:layout="@layout/fragment_products" >
        <action
            android:id="@+id/action_navigation_home_to_newProductFragment"
            app:destination="@id/newProductFragment" />
        <action
            android:id="@+id/action_navigation_home_to_editProductFragment"
            app:destination="@id/editProductFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_orders"
        android:name="xyz.daijoubuteam.foodshoppingappadmin.ui.orders.OrdersFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_orders" >
        <action
            android:id="@+id/action_navigation_orders_to_editOrderFragment"
            app:destination="@id/editOrderFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_report"
        android:name="xyz.daijoubuteam.foodshoppingappadmin.ui.report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" >
        <action
            android:id="@+id/action_navigation_report_to_orderDetailFragment"
            app:destination="@id/orderDetailFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/newProductFragment"
        android:name="xyz.daijoubuteam.foodshoppingappadmin.ui.products.newproduct.NewProductFragment"
        android:label="NewProductFragment" />
    <fragment
        android:id="@+id/editProductFragment"
        android:name="xyz.daijoubuteam.foodshoppingappadmin.ui.products.editproduct.EditProductFragment"
        android:label="EditProductFragment">
        <argument
            android:name="productSelected"
            app:argType="xyz.daijoubuteam.foodshoppingappadmin.model.Product">
        </argument>
    </fragment>
    <fragment
        android:id="@+id/editOrderFragment"
        android:name="xyz.daijoubuteam.foodshoppingappadmin.ui.orders.editorder.EditOrderFragment"
        android:label="EditOrderFragment">
        <argument
            android:name="orderSelected"
            app:argType="xyz.daijoubuteam.foodshoppingappadmin.model.Order">
        </argument>
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="xyz.daijoubuteam.foodshoppingappadmin.ui.profile.ProfileFragment"
        android:label="@string/title_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_reviewsFragment"
            app:destination="@id/reviewsFragment" />
        <action
            android:id="@+id/action_navigation_profile_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/reviewsFragment"
        android:name="xyz.daijoubuteam.foodshoppingappadmin.ui.profile.reviews.ReviewsFragment"
        android:label="ReviewsFragment" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="xyz.daijoubuteam.foodshoppingappadmin.ui.profile.editprofile.EditProfileFragment"
        android:label="EditProfileFragment" />
    <fragment
        android:id="@+id/orderDetailFragment"
        android:name="xyz.daijoubuteam.foodshoppingappadmin.ui.report.orderdetail.OrderDetailFragment"
        android:label="OrderDetailFragment" >
        <argument
            android:name="orderSelected"
            app:argType="xyz.daijoubuteam.foodshoppingappadmin.model.Order" />
    </fragment>
</navigation>