<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="xyz.daijoubuteam.foodshoppingappadmin.ui.report.ReportViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.report.ReportFragment">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etMonth"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="12dp"
            app:boxStrokeColor="@color/orange_400"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/etYear"
            android:hint="@string/month">

            <AutoCompleteTextView
                android:id="@+id/monthAuto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/avenir_next_lt_pro"
                android:text="@={viewmodel.month}"
                android:textColor="@color/black"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etYear"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="24dp"
            app:boxStrokeColor="@color/orange_400"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/etMonth"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/year">

            <AutoCompleteTextView
                android:id="@+id/yearAuto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/avenir_next_lt_pro"
                android:text="@={viewmodel.year}"
                android:textColor="@color/black"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etMonth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="24dp">
                <TextView
                    android:id="@+id/tvTextTotalOrders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="16sp"
                    android:textFontWeight="600"
                    android:text="@string/total_orders"
                    tools:ignore="UnusedAttribute" />
                <TextView
                    android:id="@+id/tvTotalOrders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/tvTextTotalOrders"
                    app:layout_constraintStart_toEndOf="@id/tvTextTotalOrders"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/deep_orange_A200"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    tools:text="24" />
                <TextView
                    android:id="@+id/tvTextTotalRevenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvTextTotalOrders"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:textFontWeight="600"
                    android:text="Total revenue:"
                    tools:ignore="UnusedAttribute" />
                <TextView
                    android:id="@+id/tvTotalRevenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/tvTextTotalRevenue"
                    app:layout_constraintStart_toEndOf="@id/tvTextTotalRevenue"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/deep_orange_A200"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    tools:text="$ 24" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>